--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,16 @@
 #下面这些内容是为了让MyBatis映射
 #指定Mybatis的Mapper文件
-mybatis.mapper-locations=classpath:mappers/*xml
+mybatis:
+  mapper-locations: classpath:mappers/*xml
 #指定Mybatis的实体目录
-mybatis.type-aliases-package=com.example.zhiwu.mybatis.entity
+  type-aliases-package: com.example.zhiwu.entity
 # 应用服务 WEB 访问端口
-server.port=9090
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test?serviceTimezone=GMT%2b8
-spring.datasource.username=root
-spring.datasource.password=123456
+server:
+  port: 9090
+
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/test?serviceTimezone=GMT%2b8 #此条配置中，test为本地对应的数据库名称，依据所设计数据库进行更改！
+    username: root
+    password: 123456
