--- a/zhiwu-front/package.json
+++ b/zhiwu-front/package.json
@@ -11,8 +11,11 @@
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
     "querystring": "^0.2.1",
+    "socket.io-client": "^4.7.2",
     "vue": "^2.6.14",
+    "vue-native-websocket": "^2.0.15",
     "vue-router": "^3.5.1",
+    "vue-socket.io": "^3.0.10",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
