--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,12 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.79</version>
         </dependency>
-
+        <!--分页插件 pageHelper-->
+<!--        <dependency>-->
+<!--            <groupId>com.github.pagehelper</groupId>-->
+<!--            <artifactId>pagehelper</artifactId>-->
+<!--            <version>4.1.3</version>-->
+<!--        </dependency>-->
 
     </dependencies>
 
